--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+contrast.log
+security.log
 
 # Ignore uploaded files in development
 /storage/*
@@ -30,3 +32,5 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 config/database.yml
+
+my_database_development
